# CPlus-Application

./: CMakeLists.txt  README.md  dockerfile
include/: api_controller.h  camera.h  fail_fast_request_behavior.h  fail_fast_request_behavior.tpp  response.h  utils.h
include/services/: capture_service.h  icapture_service.h
src/: api_controller.cpp  camera.cpp  main.cpp  utils.cpp
src/core/: fail_fast_request_behavior.cpp  response.cpp
src/services/: capture_service.cpp
